# meeting-memo-tracker

./: .gitignore  Makefile  README.md
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: main.py
apps/api/app/core/: config.py  deps.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  action_item.py  meeting.py  meeting_version.py  organisation.py  team.py  user.py
apps/api/app/routers/: actions.py  auth.py  demo.py  meetings.py  tags.py  teams.py
apps/api/app/schemas/: action_item.py  ai_output.py  auth.py  meeting.py  team.py  version.py
apps/api/app/services/: ai_service.py  file_service.py
apps/api/scripts/: seed_demo.py
apps/api/tests/: .env.test  conftest.py  test_actions.py  test_ai_service.py  test_auth.py  test_meetings.py  test_security.py
apps/web/: .env.example  middleware.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
apps/web/__tests__/app/: login.test.tsx
apps/web/__tests__/components/: AIOutput.test.tsx  CategoryBadge.test.tsx  KanbanBoard.test.tsx
apps/web/__tests__/lib/: api.test.ts  utils.test.ts
apps/web/app/: layout.tsx  providers.tsx
apps/web/app/(app)/: layout.tsx
apps/web/components/actions/: ActionCard.tsx  ActionTable.tsx  KanbanBoard.tsx
apps/web/components/meetings/: AIOutput.tsx  CategoryBadge.tsx  TagInput.tsx  (+3 more)
apps/web/e2e/: auth.spec.ts  meetings.spec.ts
apps/web/lib/: api.ts  queryClient.ts
infra/: docker-compose.yml
scripts/: seed_demo.py
(+12 files in other folders)
